<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addLocation_bottomSheet_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/shape_top_shadow"
        app:layout_anchor="@+id/addLocation_bottomSheet"
        app:layout_anchorGravity="center|top"/>

    <FrameLayout
        android:id="@+id/addLocation_bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:background="@drawable/bg_nav"
        android:backgroundTint="#131520"
        app:behavior_peekHeight="650dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/icon_view"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/divider_round_line"
            app:tint="@color/textAltDark" />

        <LinearLayout
            android:id="@+id/newEntryForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:paddingVertical="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/new_entry_title"
                    android:textColor="@color/textDark" />

                <EditText
                    android:id="@+id/locationName"
                    style="@style/InputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:ems="10"
                    android:hint="@string/new_entry_title_hint"
                    android:minHeight="48dp"
                    android:textColor="@color/textDark"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="35"
                    android:autofillHints="" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0.25" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/new_entry_description"
                    android:textColor="@color/textDark" />

                <EditText
                    style="@style/InputField"
                    android:id="@+id/locationDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:ems="10"
                    android:hint="@string/new_entry_description_hint"
                    android:minHeight="48dp"
                    android:textColor="@color/textDark"
                    android:maxLines="4"
                    android:maxLength="95"
                    android:autofillHints="" />
            </LinearLayout>

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0.25" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.25"
                    android:text="@string/new_entry_category"
                    android:textColor="@color/textDark" />

                <Spinner
                    android:id="@+id/categorySelector"
                    style="@style/InputField"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:popupBackground="@drawable/bg_input_selected"
                    android:popupElevation="10dp"
                    android:entries="@array/categories_array" />

            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0.25" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/new_entry_severity"
                    android:textColor="@color/textDark" />

                <SeekBar
                    android:id="@+id/severityLevel"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.25"
                    android:max="3"
                    android:progress="1"
                    android:progressBackgroundTint="@color/textAlt"
                    android:progressTint="@color/primary"
                    android:textColor="@color/textDark"
                    android:tickMarkTint="@color/textAlt" />

            </LinearLayout>

            <!--<Space
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="0.25" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="0.25"
                    android:switchMinWidth="48dp"
                    android:text="Notify if close by"
                    android:textColor="@color/textAltDark"
                    android:enabled="false" />
            </LinearLayout>-->

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="0.25" />

            <Button
                android:id="@+id/saveNewLocation"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/bg_btn"
                android:text="@string/save_new_location"
                android:textColor="@color/textDark"
                app:icon="@drawable/ic_round_save_24"
                app:iconTint="@color/textDark" />

        </LinearLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>