<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_round_map_24"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_location_list"
        android:icon="@drawable/ic_round_list_24"
        android:title="@string/title_location_list" />

</menu>