...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_add_location"
        android:layout_width="249dp"
        android:layout_height="56dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/bg_btn"
        android:backgroundTint="@color/text"
        android:paddingStart="32dp"
...
