...
                app:srcCompat="@drawable/ic_round_search_24"
                app:tint="@color/textDark" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/locationListRecyclerView"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:gravity="center"
        android:scaleType="center"
...
